syntax = "proto3";

option csharp_namespace = "DemoEvents";
package DemoEvents;

service DemoEvents{
  rpc Create (CreateRequest) returns (Empty);
  rpc Update (UpdateStudentRequest) returns (Empty);
}

message CreateRequest
{
  string aggregate_id = 1;
  string name = 2;
  string email = 3;
  string PhoneNumber = 4;
}

message UpdateStudentRequest
{
  string aggregate_id = 1;
  int32 sequence = 2;
  string name = 3;
  string email = 4;
  string PhoneNumber = 5;
}

message Empty {
  
}